--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,18 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= assetPrefix %>favicon.ico" />
-    <title><%= title %></title>
+    <!-- <link
+      rel="icon"
+      href="<%= htmlWebpackPlugin.options.assetPrefix %>favicon.ico"
+    /> -->
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but <%= title %> doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
       >
     </noscript>
     <div id="app"></div>
